# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: cli.py  engine.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  calc.py  gcd.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_games_script.py  brain_gcd.py  brain_prime.py  brain_progression.py  run_calc.py  run_even.py  run_gcd.py  run_prime.py  run_progression.py  script_brain_calc.py  script_brain_even.py  script_brain_gcd.py  script_brain_prime.py  script_brain_progression.py
