[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Набор мини-игр для развития логического мышления и математических способностей."
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
authors = ["HamadievAR <rymphz@gmail.com>"]
repository = "https://github.com/HamadievAR/python-project-49"
readme = "README.md"
packages = [
    { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.12"
prompt = "^0.4.1"
asciinema = "^2.4.0"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.run_even:main"
brain-calc = "brain_games.scripts.run_calc:main"
brain-gcd = "brain_games.scripts.run_gcd:main"
brain-progression = "brain_games.scripts.run_progression:main"
brain-prime = "brain_games.scripts.run_prime:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
